# morph

./: CMakeLists.txt  SharedMemory.h  build.bat
.claude/: settings.local.json
.github/workflows/: build-mac.yml
Listener/: ListenerEditor.cpp  ListenerEditor.h  ListenerProcessor.cpp  ListenerProcessor.h
Source/: FFTMorphEngine.cpp  FFTMorphEngine.h  LPCMorphEngine.cpp  LPCMorphEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
